Fix: removed max-width on text-block > p as it was breaking the text alignment

--- a/component-library/components/generic/text-block/text-block.scss
+++ b/component-library/components/generic/text-block/text-block.scss
@@ -14,6 +14,5 @@
     p{
         font-size:var(--paragraph);
         line-height: var(--line-height);
-        max-width: 75ch;
     }
 }
